--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-2023",
+  "name": "",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18"
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.5",
+    "tailwindcss": "^3.2.7"
   }
 }
